[package]
name = "meows"
version = "0.1.0"
authors = ["R. Tyler Croy <rtyler@brokenco.de>"]
edition = "2018"
homepage = "https://github.com/rtyler/meows"
repository = "https://github.com/rtyler/meows"
license = "GPL-3.0+"
keywords = ["websocket", "async"]

[dependencies]
async-std = "~1.6.0"
async-tungstenite = "~0.5.0"
futures = "~0.3.5"
lazy_static = "1.4.0"
log = "~0.4.8"
tungstenite = "~0.10.1"
serde = { version = "~1.0.111", features = ["rc"] }
serde_derive = "~1.0.106"
serde_json = "~1.0.53"
smol = "~0.1.11"


[dev-dependencies]
pretty_env_logger = "~0.3.1"
